Changed collector endpoint for POST to /com.snowplowanalytics.snowplow/tp2 (#98)
Stopped setting and sending tid (#94)
Started setting and sending eid (#93)
Allowed a single Tracker instance to send events to multiple Emitters (#91)
Started passing a list of dictionaries to the on_failure callback for POST requests (#104)
Made the "name" argument of track_screen_view optional (#103)

Version 0.4.0 (2014-06-10)
--------------------------
Migrated unstructured events to self-describing JSON (#87)
Migrated custom contexts to self-describing JSON (#88)
Gave separate events within an ecommerce transaction different transaction IDs (#89) 
Added https support for tracker (#81)
Added callbacks for flushing (#78)
Added Python-logging (#76)
Added Redis and gevent based async approach (#75)
Added thread-based AsyncBufferedConsumer (#74)
Added ability to specify port for collector (#72)
Added POST support to tracker (#70)
Added Redis-based queue (#45)
Added Buffered Consumer (#44)
Changed user_id to be set on a per-event basis (#39)
Removed type hint suffixes from unstructured events (#36)

Version 0.3.0 (2014-04-25)
--------------------------
Added custom context vendor configuration option (#67)
Changed the return value of the tracking methods to a tuple (#65)
Added coveralls code coverage button (#64)
Added currency parameter to ecommerce tracking methods (#62)
Added config option to disable contracts (#61)
Added event_vendor as argument to track_unstruct_event (#54)
Added classifiers to setup.py (#48)
Added support for custom context to all track() methods (#38)
Updated Tracker constructor to use map of optional args (#37)
Updated so a transaction and its items have the same txnid and dtm (#25)
Added support for Python 3.2 (#41)

Version 0.2.0 (2014-04-15)
--------------------------
Fixed Pycontracts dependency (#63)
Made unrequired tracker method arguments optional (#40)
Linked the Technical Docs and Setup Guide images to the appropriate pages (#60)